added and fixed footnotes

--- a/riptide/1_intro.tex
+++ b/riptide/1_intro.tex
@@ -180,7 +180,7 @@ but makes programming cumbersome~\cite{snafu,yang2021spzip,nowatzki:isca17:strea
 % compiler does stuff correctly & has new analysis
 % results / broader implications
 
-\subsection{\riptide's Approach and Contributions}
+\section*{\riptide's Approach and Contributions}
 
 \riptide is a co-designed CGRA compiler and architecture that
 supports arbitrary control flow and memory access patterns
