--- a/riptide/8_method.tex
+++ b/riptide/8_method.tex
@@ -41,7 +41,7 @@ flow.
 % 
 All baselines and \riptide use the same scalar core and main memory.
 % 
-The scalar baseline is a simple, six-stage microcontroller.
+The scalar baseline is a simple, six-stage microcontroller\footnote{This is a more energy-efficient and higher performance design than the scalar baseline in \autoref{chapter:snafu}}.
 % 
 The vector baseline adds a single-lane co-processor~\cite{manic}.
 % 
