--- a/snafu/0_intro.tex
+++ b/snafu/0_intro.tex
@@ -18,7 +18,7 @@ Thus, there is still a need for new architectures that achieve ULP ($<$1\,mW), \
 \paragraph{\Ulp CGRAs are the answer}
 %
 This chapter presents \snafuframe,%
-\footnote{\underline{S}imple \underline{N}etwork of \underline{A}rbitrary \underline{F}unctional \underline{U}nits.}
+\footnote[2]{\underline{S}imple \underline{N}etwork of \underline{A}rbitrary \underline{F}unctional \underline{U}nits.}
 a framework to generate ULP, energy-minimal coarse-grain reconfigurable arrays (CGRAs).
 %
 \snafuframe CGRAs execute in a \emph{spatial vector-dataflow} fashion,
