--- a/snafu/5_method.tex
+++ b/snafu/5_method.tex
@@ -31,7 +31,7 @@ used Cadence Joules~\cite{joules} to estimate power.
 
 \paragraph{Baselines}
 We compare \snafuarch against three baseline systems:
-\emph{(i)}~a RISC-V scalar core with a standard five-stage pipeline,
+\emph{(i)}~a RISC-V scalar core with a standard five-stage pipeline\footnote{This is a different design than the scalar baseline in~\autoref{chapter:riptide}},
 \emph{(ii)}~a vector baseline that implements the \mbox{RISC-V V} vector extension,
 and \emph{(iii)}~\manic~\cite{manic}, the prior state-of-the-art in general-purpose ULP design.
 %
