--- a/snafu/6_eval.tex
+++ b/snafu/6_eval.tex
@@ -65,7 +65,8 @@ which is naturally achieved by \snafuframe's asynchronous dataflow-firing at eac
 
 \paragraph{3) \snafuarch is ultra-low-power and has a small footprint}
 % 
-The \snafuarch fabric operates between 120\,\textmu W and 324\,\textmu W, depending on the workload, achieving an estimated 305\,MOPS/mW.
+The \snafuarch fabric operates between 120\,\textmu W and 324\,\textmu W, depending on the workload.
+% , achieving an estimated 305\,MOPS/mW.
 % 
 This operating power domain is two to five orders-of-magnitude less than most prior CGRA designs.
 % 
