--- a/riptide/A_implications.tex
+++ b/riptide/A_implications.tex
@@ -1,4 +1,4 @@
-\section{Conclusion: Implications for General-Purpose Architecture and Dark Silicon}
+\section{Implications for General-Purpose Architecture and Dark Silicon}
 \label{riptide:implications}
 
 \autoref{fig:riptide:eval:energy} and \autoref{fig:riptide:eval:perf} compare the energy and performance for {\tt dmm} on \riptide v.\ an equivalent ASIC.
