--- a/refs.bib
+++ b/refs.bib
@@ -10734,3 +10734,14 @@ series = {ASPLOS '17}
   pages={826--831},
   year={2009}
 }
+
+@article{chen2006fpga,
+  title={FPGA design automation: A survey},
+  author={Chen, Deming and Cong, Jason and Pan, Peichen and others},
+  journal={Foundations and Trends{\textregistered} in Electronic Design Automation},
+  volume={1},
+  number={3},
+  pages={195--330},
+  year={2006},
+  publisher={Now Publishers, Inc.}
+}
